# api-server-py

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  local.env  pyproject.toml  requirements.txt  scripts.py  setup.cfg
api_server/: debug.py  main.py
api_server/auth/: controller.py  controllers.py  middleware.py  middlewares.py  schemas.py  service.py  services.py
api_server/auth/utils/: token.py
api_server/core/: config.py  handlers.py  openapi.py  routers.py  schema.py  schemas.py
api_server/core/config/: __init__.py  development.py  production.py
api_server/core/database/: sqlalchemy.py
api_server/core/exception/: http.py
api_server/core/exceptions/: http.py
api_server/core/model/: ormar.py
api_server/core/models/: ormar.py
api_server/core/server/: __init__.py  bootstrap.py  doc.py  handle.py  router.py
api_server/core/utils/: password.py
api_server/migrations/: env.py
api_server/migrations/versions/: 16f836c4a350_create_superuser.py  2baf746440b9_create_users_table.py  6e653c68eb31_add_superuser.py  7b81be2266fd_create_superuser.py  eb7c63e4b6e2_create_user_table.py
api_server/users/: controller.py  controllers.py  docs.py  model.py  models.py  schema.py  schemas.py  service.py  services.py
apiserver/: main.py
apiserver/auth/: controllers.py  middlewares.py  services.py
apiserver/auth/utils/: token.py
apiserver/core/: config.py  handlers.py  openapi.py  routers.py  schemas.py
apiserver/core/config/: __init__.py  base.py  development.py  production.py
apiserver/core/databases/: sqlalchemy.py
apiserver/core/models/: ormar.py
apiserver/core/utils/: adba.py  adbfac.py  eventloop.py
apiserver/users/: controllers.py  models.py  schemas.py  services.py
app/: api.py  config.py
app/auth/: controllers.py  docs.py  middlewares.py  schemas.py  services.py
app/auth/utils/: token.py
app/core/: handlers.py  openapi.py  routers.py  schemas.py
app/core/databases/: sqlalchemy.py
app/core/exceptions/: generic.py  http.py
app/core/models/: ormar.py
app/core/utils/: adba.py  eventloop.py  password.py
app/users/: controllers.py  docs.py  models.py  schemas.py  services.py
docs/src/: config.py  model.py  router.py  server.py  server.v2.py
migrations/: adb.py  env.py
migrations/utils/: apiserver.py
migrations/versions/: 2665c0e20674_create_user_table.py  3cce72e4cea7_create_admin_user.py  6e653c68eb31_add_superuser.py  ce12920f8334_create_users_table.py
scripts/: nginx.conf  poetry.py  prestart.sh  start-reload.sh  start.sh
tests/: conftest.py  test_api.py  test_config.py  test_main.py
tests/auth/: test_controllers.py  test_docs.py  test_middlewares.py  test_schemas.py  test_services.py
tests/auth/utils/: test_token.py
tests/core/: test_config.py  test_handlers.py  test_openapi.py  test_routers.py  test_schemas.py
tests/core/config/: test_settings.py
tests/core/databases/: test_sqlalchemy.py
tests/core/exceptions/: test_generic.py  test_http.py
tests/core/models/: test_ormar.py
tests/core/utils/: test_adba.py  test_eventloop.py  test_password.py
tests/users/: test_controllers.py  test_docs.py  test_models.py  test_schemas.py  test_services.py
