[tool.poetry]
name = "apiserver"
version = "0.1.0"
description = "API SERVER REST"
authors = ["Douglas Panhota <douglaspands@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
alembic = "^1.6.5"
ormar = {extras = ["postgresql"], version = "^0.10.12"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.8.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
pydash = "^5.0.1"
gunicorn = "^20.1.0"
nest-asyncio = "^1.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
toml = "^0.10.2"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
pgcli = "^3.1.0"
ipdb = "^0.13.9"
PyYAML = "^5.4.1"
httpx = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runserver = "scripts.poetry:runserver"
lint = "scripts.poetry:lint"
test = "scripts.poetry:test"
quality = "scripts.poetry:quality"
migrate = "scripts.poetry:migrate"
makemigrations = "scripts.poetry:makemigrations"
requirements = "scripts.poetry:requirements"
dbshell = "scripts.poetry:dbshell"
pycacheremove = "scripts.poetry:pycacheremove"
cmd_test = "scripts.poetry:cmd_test"
